--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+!<!DOCTYPE html>
+<html lang="zh_TW">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="asset/img/favicon.png"  >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>short</title>
+    <title>短網址</title>
     <style>
       :root {
         --color-primary: #5c7cfa;
@@ -203,21 +203,21 @@
     </style>
   </head>
   <body>
-    <header><h1>short</h1></header>
+    <header><h1>短網址</h1></header>
     <main x-data="app" x-cloak>
       <p x-show.transition.opacity="alert" :class="alert?.type" x-text="alert?.message"></p>
-      <input placeholder="输入要缩短的网址..." x-model="url" x-ref="url" />
+      <input placeholder="請輸入你要縮短的網址..." x-model="url" x-ref="url" />
       <details>
-        <summary>自定义设置</summary>
+        <summary>自定義設置</summary>
         <div>
           <input placeholder="slug" x-model="slug" />
-          <small>Slug 默认是随机生成的短 id。</small>
+          <small>Slug 默認是隨機生成的短id。</small>
         </div>
       </details>
       <button :class="{ loading }" :disabled="loading || isValidated()" @click="submit($refs, $nextTick)">生成</button>
     </main>
     <footer>
-     service
+     by.litsou
     </footer>
     <script src="asset/js/alpine.js"></script>
     <script>
@@ -263,7 +263,7 @@
 
               $nextTick(() => {
                 $refs.url.select()
-                this.alert = { type: 'success', message: `链接 ${document.execCommand('Copy') ? '复制' : '生成'} ` }
+                this.alert = { type: 'success', message: `連結 ${document.execCommand('Copy') ? '複製' : '生成'} ` }
               })
             })
             .catch(e => {
